avcodec/ffv1enc: Allow less than 2 rows of slices for low vertical resolution

Fixes: Ticket5548

Signed-off-by: Michael Niedermayer <michael@niedermayer.cc>